kernel.log
scripts/kconfig/conf --silentoldconfig Kconfig
warning: (ARCH_MSM_KRAITMP && ARCH_MSM_CORTEX_A5) selects HAVE_HW_BRKPT_RESERVED_RW_ACCESS which has unmet direct dependencies (HAVE_HW_BREAKPOINT)
warning: (ARCH_MSM_KRAITMP && ARCH_MSM_CORTEX_A5) selects HAVE_HW_BRKPT_RESERVED_RW_ACCESS which has unmet direct dependencies (HAVE_HW_BREAKPOINT)
  CHK     include/linux/version.h
  CC      scripts/mod/empty.o
  HOSTCC  scripts/selinux/genheaders/genheaders
  HOSTCC  scripts/mod/mk_elfconfig
  HOSTCC  scripts/selinux/mdp/mdp
  MKELF   scripts/mod/elfconfig.h
  HOSTCC  scripts/mod/file2alias.o
  HOSTCC  scripts/mod/modpost.o
  HOSTCC  scripts/kallsyms
  HOSTCC  scripts/conmakehash
  HOSTCC  scripts/mod/sumversion.o
  CHK     include/generated/utsrelease.h
  HOSTCC  scripts/bin2c
make[1]: `include/generated/mach-types.h' is up to date.
  CC      kernel/bounds.s
  GEN     include/generated/bounds.h
  CC      arch/arm/kernel/asm-offsets.s
  HOSTLD  scripts/mod/modpost
  GEN     include/generated/asm-offsets.h
  CALL    scripts/checksyscalls.sh
  CC      init/main.o
  CHK     include/generated/compile.h
  CC      init/do_mounts.o
  HOSTCC  usr/gen_init_cpio
  CC      init/do_mounts_rd.o
  CC      init/do_mounts_initrd.o
  CC      init/initramfs.o
  CC      init/calibrate.o
  CC      init/version.o
  LD      init/mounts.o
  CC      arch/arm/vfp/vfpmodule.o
  AS      arch/arm/vfp/entry.o
  LD      init/built-in.o
  AS      arch/arm/vfp/vfphw.o
  CC      arch/arm/vfp/vfpsingle.o
  CC      arch/arm/kernel/elf.o
  CC      arch/arm/vfp/vfpdouble.o
  AS      arch/arm/kernel/entry-armv.o
  CC      arch/arm/mm/dma-mapping.o
  LD      arch/arm/vfp/vfp.o
  CC      arch/arm/mm/extable.o
  LD      arch/arm/vfp/built-in.o
  AS      arch/arm/kernel/entry-common.o
  CC      arch/arm/common/gic.o
  CC      arch/arm/mm/fault.o
  CC      arch/arm/mm/init.o
  CC      arch/arm/common/cpaccess.o
  CC      arch/arm/mm/iomap.o
  CC      arch/arm/kernel/irq.o
  GEN     usr/initramfs_data.cpio
  CC      arch/arm/mm/fault-armv.o
  CC      arch/arm/kernel/opcodes.o
  LD      arch/arm/common/built-in.o
  CC      arch/arm/mm/flush.o
  CC      arch/arm/kernel/process.o
  LD      arch/arm/net/built-in.o
  CC      arch/arm/kernel/ptrace.o
  CC      arch/arm/mm/idmap.o
  AS      usr/initramfs_data.o
  CC      arch/arm/mm/ioremap.o
  CC      arch/arm/kernel/return_address.o
  LD      usr/built-in.o
  CC      arch/arm/mm/mmap.o
  CC      arch/arm/mm/pgd.o
  CC      arch/arm/mm/mmu.o
  CC      arch/arm/mach-msm/io.o
  CC      arch/arm/mm/vmregion.o
  CC      arch/arm/mach-msm/dma.o
  CC      arch/arm/mm/alignment.o
  CC      arch/arm/kernel/sched_clock.o
  CC      arch/arm/mach-msm/memory.o
  CC      arch/arm/mm/highmem.o
  CC      arch/arm/mach-msm/timer.o
  AS      arch/arm/mm/abort-ev7.o
  CC      arch/arm/mach-msm/clock.o
  CC      arch/arm/kernel/setup.o
  AS      arch/arm/mm/pabort-v7.o
  CC      arch/arm/mach-msm/clock-voter.o
  AS      arch/arm/mm/cache-v7.o
  CC      arch/arm/mach-msm/clock-dummy.o
  CC      arch/arm/mm/copypage-v6.o
  CC      arch/arm/mach-msm/modem_notifier.o
  CC      arch/arm/mm/context.o
  CC      arch/arm/mach-msm/subsystem_map.o
  AS      arch/arm/mm/tlb-v7.o
  CC      arch/arm/mach-msm/cpufreq.o
  AS      arch/arm/mm/proc-v7.o
  CC      arch/arm/mach-msm/nohlt.o
  LD      arch/arm/mm/built-in.o
  CC      arch/arm/mach-msm/clock-debug.o
  CC      arch/arm/perfmon/perf-function-hooks.o
  CC      arch/arm/mach-msm/msm_kexec.o
  LD      arch/arm/perfmon/built-in.o
  CC      arch/arm/mach-msm/acpuclock.o
  CC      kernel/fork.o
  CC      arch/arm/mach-msm/acpuclock-krait.o
  CC      kernel/exec_domain.o
  CC      arch/arm/mach-msm/msm-krait-l2-accessors.o
  CC      arch/arm/mach-msm/pmu.o
  CC      kernel/panic.o
  CC      arch/arm/mach-msm/perf_event_msm_krait_l2.o
  CC      kernel/printk.o
  CC      arch/arm/mach-msm/krait-scm.o
  CC      kernel/cpu.o
  CC      arch/arm/mach-msm/perf_debug.o
  CC      kernel/exit.o
  AS      arch/arm/mach-msm/headsmp.o
arch/arm/kernel/process.c: In function 'arch_vma_name':
arch/arm/kernel/process.c:695:2: error: implicit declaration of function 'get_user_timers_vma' [-Werror=implicit-function-declaration]
  else if (vma == get_user_timers_vma(NULL))
  ^
arch/arm/kernel/process.c:695:15: warning: comparison between pointer and integer
  else if (vma == get_user_timers_vma(NULL))
               ^
arch/arm/kernel/process.c: In function '__show_regs':
arch/arm/kernel/process.c:465:4: error: invalid 'asm': operand number out of range
    asm("mrc p15, 0, %0, c2, c0\n\t"
    ^
{standard input}: Assembler messages:
{standard input}:1311: Error: syntax error -- `mrc p15,0,,c3,c0'
cc1: some warnings being treated as errors
make[1]: *** [arch/arm/kernel/process.o] Error 1
make[1]: *** Waiting for unfinished jobs....
  CC      arch/arm/mach-msm/platsmp.o
  CC      kernel/itimer.o
  CC      arch/arm/mach-msm/hotplug.o
  AS      arch/arm/mach-msm/idle-v7.o
  TIMEC   kernel/timeconst.h
  CC      arch/arm/mach-msm/scm.o
  CC      arch/arm/mach-msm/scm-boot.o
  CC      kernel/softirq.o
  CC      arch/arm/mach-msm/peripheral-loader.o
  CC      arch/arm/mach-msm/scm-pas.o
  CC      arch/arm/mach-msm/pil-q6v4.o
  CC      arch/arm/mach-msm/pil-riva.o
  CC      arch/arm/mach-msm/pil-tzapps.o
  CC      kernel/resource.o
  CC      arch/arm/mach-msm/pil-vidc.o
  CC      kernel/sysctl.o
  CC      arch/arm/mach-msm/pil-dsps.o
  CC      arch/arm/mach-msm/pil-gss.o
  CC      kernel/sysctl_binary.o
  CC      arch/arm/mach-msm/bam_dmux.o
  CC      mm/filemap.o
  CC      kernel/capability.o
  CC      mm/mempool.o
  CC      arch/arm/mach-msm/smem_log.o
  CC      mm/oom_kill.o
  CC      kernel/ptrace.o
  CC      arch/arm/mach-msm/smd.o
  CC      mm/fadvise.o
  CC      kernel/timer.o
  CC      arch/arm/mach-msm/remote_spinlock.o
  CC      mm/maccess.o
  CC      kernel/user.o
  CC      arch/arm/mach-msm/smd_private.o
  CC      mm/page_alloc.o
  CC      kernel/signal.o
  CC      arch/arm/mach-msm/socinfo.o
  CC      kernel/sys.o
  CC      mm/page-writeback.o
  CC      arch/arm/mach-msm/smd_tty.o
  CC      kernel/kmod.o
  CC      mm/readahead.o
  CC      arch/arm/mach-msm/smd_qmi.o
  CC      kernel/workqueue.o
  CC      mm/swap.o
  CC      arch/arm/mach-msm/smd_pkt.o
make: *** [arch/arm/kernel] Error 2
make: *** Waiting for unfinished jobs....
  CC      arch/arm/mach-msm/msm_dsps.o
  CC      mm/truncate.o
  CC      arch/arm/mach-msm/smd_nmea.o
  CC      arch/arm/mach-msm/ipc_router_smd_xprt.o
  CC      arch/arm/mach-msm/ipc_router.o
  CC      mm/vmscan.o
  CC      arch/arm/mach-msm/ipc_socket.o
  CC      arch/arm/mach-msm/smd_rpc_sym.o
  CC      arch/arm/mach-msm/lge/mako/board-mako.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-camera.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-display.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-gpiomux.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-gpu.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-input.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-pmic.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-regulator.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-misc.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-sound.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-storage.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-nfc.o
  CC      arch/arm/mach-msm/lge/mako/board-mako-earjack-debugger.o
  LD      arch/arm/mach-msm/lge/mako/built-in.o
  CC      arch/arm/mach-msm/lge/devices_lge.o
  CC      arch/arm/mach-msm/lge/lge_qfprom_access.o
  CC      arch/arm/mach-msm/lge/lge_qc_lcdc_luts.o
  CC      arch/arm/mach-msm/lge/lge_kcal_ctrl.o
  CC      arch/arm/mach-msm/lge/lge_panic_handler.o
  LD      arch/arm/mach-msm/lge/built-in.o
  CC      arch/arm/mach-msm/msm_bus/msm_bus_core.o
mm/swap.c: In function 'put_compound_page':
mm/swap.c:86:5: error: implicit declaration of function 'PageHeadHuge' [-Werror=implicit-function-declaration]
     if (PageHeadHuge(page_head)) {
     ^
cc1: some warnings being treated as errors
make[1]: *** [mm/swap.o] Error 1
make[1]: *** Waiting for unfinished jobs....
  CC      arch/arm/mach-msm/msm_bus/msm_bus_fabric.o
  CC      arch/arm/mach-msm/msm_bus/msm_bus_config.o
  CC      arch/arm/mach-msm/msm_bus/msm_bus_arb.o
  CC      arch/arm/mach-msm/msm_bus/msm_bus_bimc.o
  CC      arch/arm/mach-msm/msm_bus/msm_bus_noc.o
  CC      arch/arm/mach-msm/msm_bus/msm_bus_of.o
  CC      arch/arm/mach-msm/msm_bus/msm_bus_rpm.o
  CC      arch/arm/mach-msm/msm_bus/msm_bus_board_8960.o
  CC      arch/arm/mach-msm/msm_bus/msm_bus_board_8064.o
  CC      kernel/pid.o
  CC      arch/arm/mach-msm/msm_bus/msm_bus_dbg.o
  LD      arch/arm/mach-msm/msm_bus/built-in.o
  CC      arch/arm/mach-msm/qdsp6v2/apr.o
  CC      arch/arm/mach-msm/qdsp6v2/apr_v1.o
  CC      arch/arm/mach-msm/qdsp6v2/apr_tal.o
  CC      arch/arm/mach-msm/qdsp6v2/q6core.o
  CC      arch/arm/mach-msm/qdsp6v2/dsp_debug.o
  CC      arch/arm/mach-msm/qdsp6v2/audio_acdb.o
  CC      arch/arm/mach-msm/qdsp6v2/aac_in.o
  CC      arch/arm/mach-msm/qdsp6v2/qcelp_in.o
  CC      arch/arm/mach-msm/qdsp6v2/evrc_in.o
  CC      arch/arm/mach-msm/qdsp6v2/amrnb_in.o
  CC      arch/arm/mach-msm/qdsp6v2/audio_utils.o
  CC      kernel/rcupdate.o
  CC      arch/arm/mach-msm/qdsp6v2/audio_wma.o
  CC      kernel/extable.o
  CC      kernel/params.o
